🖌️ Fix spacing on homepage

--- a/_sass/views/index.scss
+++ b/_sass/views/index.scss
@@ -113,7 +113,8 @@
 
                 @include media($on-laptop) {
                     font-size: 1rem;
-                    margin: 1em 0 0;
+                    margin-right: 0;
+                    margin-left: 1em;
                     order: 2;
                 }
             }
